<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/top_news"
        android:orderInCategory="1"
        android:title="@string/top"
        app:showAsAction="ifRoom"
        android:onClick="onOptionsItemSelected"/>
    <item
        android:id="@+id/tech_news"
        android:orderInCategory="2"
        android:title="@string/tech"
        app:showAsAction="ifRoom"
        android:onClick="onOptionsItemSelected"/>
    <item
        android:id="@+id/music_news"
        android:orderInCategory="3"
        android:title="@string/music"
        app:showAsAction="ifRoom"
        android:onClick="onOptionsItemSelected" />
    <item
        android:id="@+id/sport_news"
        android:orderInCategory="3"
        android:title="@string/sport"
        app:showAsAction="never" />
    <item
        android:id="@+id/health_news"
        android:orderInCategory="4"
        android:title="@string/health"
        app:showAsAction="never" />
</menu>